--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
-    "webpack": "^5.33.2",
+    "webpack": "5.76.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-import-glob-loader": "^1.6.3"
